--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.star_zero.pagingretrofitsample"
         minSdkVersion 19
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -28,7 +28,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
@@ -36,7 +36,14 @@ dependencies {
 
     implementation 'com.jakewharton.timber:timber:4.6.0'
 
-    implementation "android.arch.paging:runtime:1.0.0-alpha4-1"
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation ("android.arch.paging:runtime:1.0.0") {
+        // because paging use version 27.1.0 of recyclerview-v7
+        exclude group: 'com.android.support', module: 'recyclerview-v7'
+    }
+
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 }
